2005-08-12  Kaushal Kumar  <kakumar@novell.com>

	* gtkhtml-stream.c (gtk_html_stream_vprintf): Use g_strdup_vprintf instead of 
	g_printf_string_upper_bound since the latter returns incorrect values. 

	Fixes tasks and contact list dump in evolution.
	Fix bug #270844.

2005-08-05  Kaushal Kumar  <kakumar@novell.com>

	* htmlengine-edit.c (html_engine_get_insert_level_for_object): Advance clue 
	to next level to fix infinite looping for cursor level. 

	Fixes bug #300696.

2005-08-03  Kaushal Kumar  <kakumar@novell.com>

	* htmlengine-edit-cut-and-paste.c (check_for_simple_containers): Fix the 
	handling of simple deletion of text from table cells. 

	Fixes bugs #300130, 309174.

2005-07-11  Diego Gonzalez  <diego@pemas.net>

	* htmldrawqueue.c (clear_element_destroy): replace deprecated
	  gdk_pixbuf_unref call and use g_object_unref instead.
	* htmlgdkpainter.c (draw_pixmap): ditto
	* htmlimage.c (html_image_factory_free): ditto

2005-07-07  Kjartan Maraas  <kmaraas@gnome.org>

	* htmlclueflow.c: (write_item_marker): Plug a leak 

2005-07-11  Kaushal Kumar  <kakumar@novell.com>

	* htmlpainter.c (html_painter_set_widget): Call the set_widget directly 
	instead of returning it.
	Patch from Damien Carbery. Fixes bug #309785.

2005-07-06  Mengjie Yu  <meng-jie.yu@sun.com>

	* gtkhtml.c: (gtk_html_class_init):
	* gtkhtml.h:
	Change the signal name object_deleted to object_delete.

	* htmlengine-edit-cut-and-paste.c: (html_engine_delete):
	We should emit the object_delete signal before we really delete it
	since gnopernicus will check them before deleting.

	Fixes #306238

2005-07-06  Kaushal Kumar  <kakumar@novell.com>

	* gtkhtml.c (gtk_html_class_init): Fix typo. Fixes bug #309242.

2005-05-03  Srinivasa Ragavan <sragavan@novell.com>

	* gtkhtml.c (selection_received), (drag_data_received):
	  Added code to support DnD of evolution mail, contacts, calendar,
	  tasks.

2005-05-19  Changwoo Ryu  <cwryu@debian.org>
